<resources>
    <string name="app_name">ShortBio</string>
    <string name="sobre">Sobre</string>
    <string name="formacao">Formação</string>
    <string name="experiencia">Experiência</string>
    <string name="objetivo">Objetivo</string>
    <string name="nome">Nome: Juliane Aparecida Monteiro Dos Santos</string>
    <string name="idade">Idade: 32 anos</string>
    <string name="formacao_descricao">Cursando o 6º ciclo de ADS na Fatec Praia Grande</string>
    <string name="experienciaum"><b>Mc Donalds:</b> PAC</string>
    <string name="experienciadois"><b>Lojas Centauro:</b>Assistente de Check Out</string>
    <string name="experienciatres"><b>IBM:</b> Estágio (Consultora SAP)</string>
    <string name="objetivo_descricao">Me tornar uma excelente profissional. "\n"E buscar sempre me aperfeiçoar no que faço.</string>
    <string name="quemsou">Sou esposa e mãe de dois meninos. Estudante na área de TI e estagiária na empresa que sonhei trabalhar desde que iniciei a faculdade: IBM.</string>
    <string name="hobbies"> Faço crochê nas horas vagas - isso me ajuda a desestressar -, gosto de assistir filmes e séries, andar na praia com as crianças..</string>
</resources>