<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Experiencia">

    <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experiencia"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/experienciaum"
            android:textSize="50sp"
            android:layout_marginTop="83dp"
            android:textStyle="bold" />
    <TextView
            android:id="@+id/experienciaum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experienciaum"
            app:layout_constraintTop_toBottomOf="@id/experienciadois"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/titulo"
            android:layout_marginTop="80dp"/>
    <TextView
            android:id="@+id/experienciadois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experienciadois"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@id/experienciaum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"/>
    <TextView
            android:id="@+id/experienciatres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experienciatres"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@id/experienciadois"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"/>
</androidx.constraintlayout.widget.ConstraintLayout>