<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Sobre">

    <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sobre"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/nome"
            android:textSize="50sp"
            android:layout_marginTop="83dp"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            app:layout_constraintTop_toBottomOf="@id/titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/titulo"
            android:layout_marginTop="80dp"/>
    <TextView
            android:id="@+id/idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idade"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@id/nome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"/>
    <TextView

            android:id="@+id/quemsou"
            android:layout_width="316dp"
            android:layout_height="62dp"
            android:text="@string/hobbie"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@id/idade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"/>
    <TextView
            android:id="@+id/hobbie"
            android:layout_width="316dp"
            android:layout_height="62dp"
            android:text="@string/hobbie"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@id/quemsou"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"/>
</androidx.constraintlayout.widget.ConstraintLayout>